completed upper card markup

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -15,92 +15,19 @@ body {
 }
 
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "Outfit", sans-serif;
 }
 
-.navbar {
+.para-font {
+  font-size: 1.8rem;
+}
+
+.app-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  background-image: linear-gradient(to right, #672280, #a626d3);
-  padding: 5rem;
-  height: 6.5rem;
-}
-
-.navbar__logo {
-  width: 6rem;
-  margin-right: 1rem;
-}
-
-.navbar__logo-text {
-  font-size: 3rem;
-  color: #ffffff;
-}
-
-.main {
-  padding: 5rem 20%;
-}
-
-@media screen and (max-width: 700px) {
-  .main {
-    padding: 3rem 10%;
-  }
-}
-
-.form-container--form__inputs {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   width: 100%;
-  margin-bottom: 2.5rem;
-}
-
-.form-container--form__input {
-  width: 48%;
-  outline: none;
-  border: 0.2rem solid #d5d4d8;
-  padding: 1.5rem 1rem;
-  font-size: 2rem;
-  color: #0d0d0d;
-  border-radius: 0.5rem;
-  transition: all 1s;
-}
-
-.form-container--form__input:focus {
-  outline: auto;
-}
-
-.form-container__button {
-  width: 100%;
-  padding: 1.5rem 0;
-  border-radius: 0.5rem;
-  outline: none;
-  border: none;
-  background-color: #a626d3;
-  color: #ffffff;
-  font-size: 2rem;
-  transition: all 0.3s;
-}
-
-.form-container__button:hover {
-  cursor: pointer;
-  background-color: #672280;
-}
-
-.form-container__button:active {
-  transform: translateY(0.5rem);
-}
-
-.meme-container {
-  width: 100%;
-  margin-top: 6rem;
-  border-radius: 0.5rem;
-  border: 0.2rem solid #672280;
-}
-
-.meme-container__image {
-  width: 100%;
-  border-radius: 0.5rem;
-  object-fit: cover;
+  height: 100vh;
+  background-color: #0d192b;
 }
 /*# sourceMappingURL=main.css.map */
