--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -1,6 +1,21 @@
 .app-container {
+	padding: 38.5rem;
 	@include flex-row-center;
 	width: 100%;
 	height: 100vh;
 	background-color: $mainBG;
+}
+
+.card {
+	@include border-radius;
+	background-color: $cardBG;
+	width: 36.9rem;
+	padding: 2.5rem;
+
+	&--data {
+		&__image {
+			width: 100%;
+			@include border-radius;
+		}
+	}
 }
