--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -1,8 +1,8 @@
 .app-container {
-	padding: 38.5rem;
+	padding: 16rem;
 	@include flex-row-center;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	background-color: $mainBG;
 }
 
@@ -15,7 +15,54 @@
 	&--data {
 		&__image {
 			width: 100%;
-			@include border-radius;
+			border-radius: 1rem;
 		}
+
+		&__title {
+			font-size: 2.3rem;
+			margin-top: 2.3rem;
+			color: $White;
+		}
+
+		&__description {
+			margin-top: 2rem;
+			letter-spacing: 0.049rem;
+			line-height: 2.63rem;
+			color: $White;
+			font-weight: 300;
+		}
+	}
+
+	&--nft {
+		@include flex-row;
+		justify-content: space-between;
+		align-items: center;
+		font-size: 1.8rem;
+		margin-top: 2.3rem;
+
+		img {
+			margin-right: 0.7rem;
+		}
+
+		&__pricing {
+			@include flex-row-center;
+			img {
+				width: 1.1rem;
+			}
+			font-weight: 500;
+			color: $cyan;
+		}
+
+		&__duration {
+			@include flex-row-center;
+			color: $White;
+			font-weight: 300;
+		}
+	}
+
+	hr {
+		border: none;
+		border-top: 0.2rem solid $line;
+		margin-top: 2.5rem;
 	}
 }
