--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -23,12 +23,12 @@ body {
 }
 
 .app-container {
-  padding: 38.5rem;
+  padding: 16rem;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: #0d192b;
 }
 
@@ -41,6 +41,59 @@ body {
 
 .card--data__image {
   width: 100%;
-  border-radius: 1.5rem;
+  border-radius: 1rem;
+}
+
+.card--data__title {
+  font-size: 2.3rem;
+  margin-top: 2.3rem;
+  color: white;
+}
+
+.card--data__description {
+  margin-top: 2rem;
+  letter-spacing: 0.049rem;
+  line-height: 2.63rem;
+  color: white;
+  font-weight: 300;
+}
+
+.card--nft {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.8rem;
+  margin-top: 2.3rem;
+}
+
+.card--nft img {
+  margin-right: 0.7rem;
+}
+
+.card--nft__pricing {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  color: #00fff7;
+}
+
+.card--nft__pricing img {
+  width: 1.1rem;
+}
+
+.card--nft__duration {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: 300;
+}
+
+.card hr {
+  border: none;
+  border-top: 0.2rem solid #2f415b;
+  margin-top: 2.5rem;
 }
 /*# sourceMappingURL=main.css.map */
