--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -54,7 +54,7 @@ body {
   margin-top: 2rem;
   letter-spacing: 0.049rem;
   line-height: 2.63rem;
-  color: white;
+  color: #8bacda;
   font-weight: 300;
 }
 
@@ -87,7 +87,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: #8bacda;
   font-weight: 300;
 }
 
@@ -95,5 +95,34 @@ body {
   border: none;
   border-top: 0.2rem solid #2f415b;
   margin-top: 2.5rem;
+}
+
+.card--creator {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 1.5rem 0;
+}
+
+.card--creator__avatar {
+  width: 3.5rem;
+}
+
+.card--creator__avatar img {
+  width: 100%;
+  border: 0.2rem solid white;
+  border-radius: 50%;
+}
+
+.card--creator__info {
+  margin-left: 1.8rem;
+  font-size: 1.7rem;
+  color: #8bacda;
+  font-weight: 400;
+}
+
+.card--creator__info span {
+  color: white;
+  font-weight: 600;
 }
 /*# sourceMappingURL=main.css.map */
