--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -14,6 +14,31 @@
 	padding: 2.5rem;
 
 	&--data {
+		&__image-container {
+			position: relative;
+		}
+
+		&__image-container:hover &__activeModal {
+			opacity: 1;
+			width: 100%;
+			height: 100%;
+		}
+
+		&__activeModal {
+			width: 30%;
+			height: 30%;
+			background-color: rgba($cyan, 0.5);
+			border-radius: 1rem;
+			@include flex-row-center;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			cursor: pointer;
+			opacity: 0;
+			transition: all 0.3s;
+		}
+
 		&__image {
 			width: 100%;
 			border-radius: 1rem;
