--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -40,6 +40,33 @@ body {
   padding: 2.5rem;
 }
 
+.card--data__image-container {
+  position: relative;
+}
+
+.card--data__image-container:hover .card--data__activeModal {
+  opacity: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.card--data__activeModal {
+  width: 30%;
+  height: 30%;
+  background-color: rgba(0, 255, 247, 0.5);
+  border-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  opacity: 0;
+  transition: all 0.3s;
+}
+
 .card--data__image {
   width: 100%;
   border-radius: 1rem;
