--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -1,6 +1,6 @@
 .app-container {
-	padding: 16rem;
-	@include flex-row-center;
+	padding: 16rem 16rem 4.6rem 16rem;
+	@include flex-column-center;
 	width: 100%;
 	height: 100%;
 	background-color: $mainBG;
