--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -23,8 +23,9 @@ body {
 }
 
 .app-container {
-  padding: 16rem;
+  padding: 16rem 16rem 4.6rem 16rem;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -164,5 +165,38 @@ body {
 .card--creator__info span:hover {
   color: #00fff7;
   cursor: pointer;
+}
+
+.attribution {
+  margin-top: 10rem;
+  color: #8bacda;
+  font-size: 1.5rem;
+}
+
+.attribution i {
+  color: rgba(255, 7, 58, 0.7);
+  margin: 0 0.5rem;
+  animation: infinite heartPounding ease-in-out 1s;
+}
+
+.attribution a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 600;
+  margin-left: 0.5rem;
+  transition: all 0.3s;
+}
+
+.attribution a:hover {
+  color: #00fff7;
+}
+
+@keyframes heartPounding {
+  25% {
+    transform: scale(1.2);
+  }
+  75% {
+    transform: scale(0.8);
+  }
 }
 /*# sourceMappingURL=main.css.map */
