--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -4,6 +4,10 @@
 	width: 100%;
 	height: 100%;
 	background-color: $mainBG;
+
+	@media screen and(max-width: 500px) {
+		padding-top: 8rem;
+	}
 }
 
 .card {
@@ -12,6 +16,10 @@
 	background-color: $cardBG;
 	width: 36.9rem;
 	padding: 2.5rem;
+
+	@media screen and(max-width: 400px) {
+		width: 34rem;
+	}
 
 	&--data {
 		&__image-container {
